@@ -76,8 +76,7 @@ public class SeedProcessor {
                             .setInactive(false)
                             .setEntity(ref);
                     return member;
-                })
-                .collect(Collectors.toList());
+                }).toList();
 
         return group.setMember(members);
     }
@@ -100,7 +99,7 @@ public class SeedProcessor {
         bundle.addEntry().setResource(practitioner).setFullUrl("http://something.gov/" + practitioner.getIdentifierFirstRep().getValue());
 
         entry.getValue()
-                .forEach((value) -> {
+                .forEach(value -> {
                     // Add some random values to the patient
                     final Patient patient = new Patient();
                     patient.addIdentifier().setValue(value.getRight()).setSystem(DPCIdentifierSystem.MBI.getSystem());
@@ -121,15 +120,15 @@ public class SeedProcessor {
         final CodeableConcept attributionConcept = new CodeableConcept();
         attributionConcept.addCoding().setCode("attributed-to");
 
-        final CodeableConcept NPIConcept = new CodeableConcept();
-        NPIConcept.addCoding().setSystem(DPCIdentifierSystem.NPPES.getSystem()).setCode(providerNPI);
+        final CodeableConcept npiConcept = new CodeableConcept();
+        npiConcept.addCoding().setSystem(DPCIdentifierSystem.NPPES.getSystem()).setCode(providerNPI);
         final Group rosterGroup = new Group();
         rosterGroup.setType(Group.GroupType.PERSON);
         rosterGroup.setActive(true);
         rosterGroup.addCharacteristic()
                 .setExclude(false)
                 .setCode(attributionConcept)
-                .setValue(NPIConcept);
+                .setValue(npiConcept);
         FHIRBuilders.addOrganizationTag(rosterGroup, UUID.fromString(organizationID));
 
         return rosterGroup;
